Fix for issue 106, request from Payoshni to make titles bold on home page and admin dashboard, print type not description - description is too long

--- a/frp/frp/static/css/prathambooks.css
+++ b/frp/frp/static/css/prathambooks.css
@@ -4005,7 +4005,9 @@ header nav ul li .caret {
 }
 
 #geography .col-md-4 p {
-  min-height:43px;
+  min-height: 234px;
+  height: 234px;
+  overflow: auto;
 }
 
 #geography .progress {
